// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots RadioGroup Controlled 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <fieldset
      class="Fieldset-sc-9aoml1-0 SrOR sc-fzXfNf cnzRUd"
    >
      <legend
        style="margin-bottom:8px"
      >
        <span
          style="font-size:14px;font-weight:600;line-height:1.71428571"
        >
          Setting Selection
        </span>
      </legend>
      <div
        class="Box-sc-1qu1edy-0 jgHxgc sc-fzXfNe kVFKSZ"
      >
        <label
          class="ClickInputLabel-j2axnv-0 hdKIjC"
        >
          <input
            aria-checked="true"
            aria-invalid="false"
            aria-required="false"
            checked=""
            class="Radio__RadioInput-sc-82dpxx-1 eKuWUu sc-fzXfNe kVFKSZ"
            name="settingSelection"
            type="radio"
            value="a"
          />
          <div
            checked=""
            class="Radio__VisualRadio-sc-82dpxx-0 liXUJA"
          />
          <span
            class="sc-AykKF jKbmDj"
            color="currentColor"
            font-size="16px"
          >
             Option A 
          </span>
        </label>
      </div>
      <div
        class="Box-sc-1qu1edy-0 jgHxgc sc-fzXfNe kVFKSZ"
      >
        <label
          class="ClickInputLabel-j2axnv-0 hdKIjC"
        >
          <input
            aria-checked="false"
            aria-invalid="false"
            aria-required="false"
            class="Radio__RadioInput-sc-82dpxx-1 eKuWUu sc-fzXfNe kVFKSZ"
            name="settingSelection"
            type="radio"
            value="b"
          />
          <div
            class="Radio__VisualRadio-sc-82dpxx-0 liXUJA"
          />
          <span
            class="sc-AykKF jKbmDj"
            color="currentColor"
            font-size="16px"
          >
             Option B 
          </span>
        </label>
      </div>
      <div
        class="Box-sc-1qu1edy-0 jgHxgc sc-fzXfNe kVFKSZ"
      >
        <label
          class="ClickInputLabel-j2axnv-0 hdKIjC"
        >
          <input
            aria-checked="false"
            aria-invalid="false"
            aria-required="false"
            class="Radio__RadioInput-sc-82dpxx-1 eKuWUu sc-fzXfNe kVFKSZ"
            name="settingSelection"
            type="radio"
            value="c"
          />
          <div
            class="Radio__VisualRadio-sc-82dpxx-0 liXUJA"
          />
          <span
            class="sc-AykKF jKbmDj"
            color="currentColor"
            font-size="16px"
          >
             Option C 
          </span>
        </label>
      </div>
    </fieldset>
  </div>
</div>
`;

exports[`Storyshots RadioGroup RadioGroup 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <fieldset
      class="Fieldset-sc-9aoml1-0 SrOR sc-fzXfNf cnzRUd"
    >
      <legend
        style="margin-bottom:8px"
      >
        <span
          style="font-size:14px;font-weight:600;line-height:1.71428571"
        >
          Setting Selection
        </span>
      </legend>
      <div
        class="Box-sc-1qu1edy-0 jgHxgc sc-fzXfNe kVFKSZ"
      >
        <label
          class="ClickInputLabel-j2axnv-0 hdKIjC"
        >
          <input
            aria-invalid="false"
            aria-required="false"
            class="Radio__RadioInput-sc-82dpxx-1 eKuWUu sc-fzXfNe kVFKSZ"
            name="settingSelection"
            type="radio"
            value="a"
          />
          <div
            class="Radio__VisualRadio-sc-82dpxx-0 liXUJA"
          />
          <span
            class="sc-AykKF jKbmDj"
            color="currentColor"
            font-size="16px"
          >
             Option A 
          </span>
        </label>
      </div>
      <div
        class="Box-sc-1qu1edy-0 jgHxgc sc-fzXfNe kVFKSZ"
      >
        <label
          class="ClickInputLabel-j2axnv-0 hdKIjC"
        >
          <input
            aria-invalid="false"
            aria-required="false"
            class="Radio__RadioInput-sc-82dpxx-1 eKuWUu sc-fzXfNe kVFKSZ"
            name="settingSelection"
            type="radio"
            value="b"
          />
          <div
            class="Radio__VisualRadio-sc-82dpxx-0 liXUJA"
          />
          <span
            class="sc-AykKF jKbmDj"
            color="currentColor"
            font-size="16px"
          >
             Option B 
          </span>
        </label>
      </div>
      <div
        class="Box-sc-1qu1edy-0 jgHxgc sc-fzXfNe kVFKSZ"
      >
        <label
          class="ClickInputLabel-j2axnv-0 hdKIjC"
        >
          <input
            aria-invalid="false"
            aria-required="false"
            class="Radio__RadioInput-sc-82dpxx-1 eKuWUu sc-fzXfNe kVFKSZ"
            name="settingSelection"
            type="radio"
            value="c"
          />
          <div
            class="Radio__VisualRadio-sc-82dpxx-0 liXUJA"
          />
          <span
            class="sc-AykKF jKbmDj"
            color="currentColor"
            font-size="16px"
          >
             Option C 
          </span>
        </label>
      </div>
    </fieldset>
  </div>
</div>
`;

exports[`Storyshots RadioGroup RadioGroup with all props 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <fieldset
      class="Fieldset-sc-9aoml1-0 SrOR sc-fzXfNf cnzRUd"
    >
      <legend
        style="margin-bottom:8px"
      >
        <span
          style="font-size:14px;font-weight:600;line-height:1.71428571"
        >
          Setting Selection
        </span>
        <span
          class="sc-AykKF bNiwGI"
          color="darkGrey"
          font-size="12px"
        >
          (Required)
        </span>
      </legend>
      <p
        class="sc-AykKF sc-fzXfLV kckwMb"
        color="currentColor"
        font-size="16px"
      >
        Select a setting from the menu below:
      </p>
      <div
        class="Box-sc-1qu1edy-0 jgHxgc sc-fzXfNe kVFKSZ"
      >
        <label
          class="ClickInputLabel-j2axnv-0 hdKIjC"
        >
          <input
            aria-invalid="false"
            aria-required="true"
            checked=""
            class="Radio__RadioInput-sc-82dpxx-1 eKuWUu sc-fzXfNe kVFKSZ"
            name="settingSelection"
            required=""
            type="radio"
            value="a"
          />
          <div
            class="Radio__VisualRadio-sc-82dpxx-0 liXUJA"
          />
          <span
            class="sc-AykKF jKbmDj"
            color="currentColor"
            font-size="16px"
          >
             Option A 
          </span>
        </label>
      </div>
      <div
        class="Box-sc-1qu1edy-0 jgHxgc sc-fzXfNe kVFKSZ"
      >
        <label
          class="ClickInputLabel-j2axnv-0 hdKIjC"
        >
          <input
            aria-invalid="false"
            aria-required="true"
            class="Radio__RadioInput-sc-82dpxx-1 eKuWUu sc-fzXfNe kVFKSZ"
            name="settingSelection"
            required=""
            type="radio"
            value="b"
          />
          <div
            class="Radio__VisualRadio-sc-82dpxx-0 liXUJA"
          />
          <span
            class="sc-AykKF jKbmDj"
            color="currentColor"
            font-size="16px"
          >
             Option B 
          </span>
        </label>
      </div>
      <div
        class="Box-sc-1qu1edy-0 jgHxgc sc-fzXfNe kVFKSZ"
      >
        <label
          class="ClickInputLabel-j2axnv-0 hdKIjC"
        >
          <input
            aria-invalid="false"
            aria-required="true"
            class="Radio__RadioInput-sc-82dpxx-1 eKuWUu sc-fzXfNe kVFKSZ"
            name="settingSelection"
            required=""
            type="radio"
            value="c"
          />
          <div
            class="Radio__VisualRadio-sc-82dpxx-0 liXUJA"
          />
          <span
            class="sc-AykKF jKbmDj"
            color="currentColor"
            font-size="16px"
          >
             Option C 
          </span>
        </label>
      </div>
    </fieldset>
  </div>
</div>
`;

exports[`Storyshots RadioGroup Set to disabled 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <fieldset
      class="Fieldset-sc-9aoml1-0 SrOR sc-fzXfNf cnzRUd"
    >
      <legend
        style="margin-bottom:8px"
      >
        <span
          style="font-size:14px;font-weight:600;line-height:1.71428571"
        >
          Setting Selection
        </span>
      </legend>
      <div
        class="Box-sc-1qu1edy-0 jgHxgc sc-fzXfNe kVFKSZ"
      >
        <label
          class="ClickInputLabel-j2axnv-0 jxKJCC"
          disabled=""
        >
          <input
            aria-invalid="false"
            aria-required="false"
            checked=""
            class="Radio__RadioInput-sc-82dpxx-1 bzuiei sc-fzXfNe kVFKSZ"
            disabled=""
            name="settingSelection"
            type="radio"
            value="a"
          />
          <div
            class="Radio__VisualRadio-sc-82dpxx-0 dWBwrU"
            disabled=""
          />
          <span
            class="sc-AykKF gRcVjH"
            color="currentColor"
            disabled=""
            font-size="16px"
          >
             Option A 
          </span>
        </label>
      </div>
      <div
        class="Box-sc-1qu1edy-0 jgHxgc sc-fzXfNe kVFKSZ"
      >
        <label
          class="ClickInputLabel-j2axnv-0 jxKJCC"
          disabled=""
        >
          <input
            aria-invalid="false"
            aria-required="false"
            class="Radio__RadioInput-sc-82dpxx-1 bzuiei sc-fzXfNe kVFKSZ"
            disabled=""
            name="settingSelection"
            type="radio"
            value="b"
          />
          <div
            class="Radio__VisualRadio-sc-82dpxx-0 dWBwrU"
            disabled=""
          />
          <span
            class="sc-AykKF gRcVjH"
            color="currentColor"
            disabled=""
            font-size="16px"
          >
             Option B 
          </span>
        </label>
      </div>
      <div
        class="Box-sc-1qu1edy-0 jgHxgc sc-fzXfNe kVFKSZ"
      >
        <label
          class="ClickInputLabel-j2axnv-0 jxKJCC"
          disabled=""
        >
          <input
            aria-invalid="false"
            aria-required="false"
            class="Radio__RadioInput-sc-82dpxx-1 bzuiei sc-fzXfNe kVFKSZ"
            disabled=""
            name="settingSelection"
            type="radio"
            value="c"
          />
          <div
            class="Radio__VisualRadio-sc-82dpxx-0 dWBwrU"
            disabled=""
          />
          <span
            class="sc-AykKF gRcVjH"
            color="currentColor"
            disabled=""
            font-size="16px"
          >
             Option C 
          </span>
        </label>
      </div>
    </fieldset>
  </div>
</div>
`;

exports[`Storyshots RadioGroup with error list 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <fieldset
      class="Fieldset-sc-9aoml1-0 SrOR sc-fzXfNf cnzRUd"
    >
      <legend
        style="margin-bottom:8px"
      >
        <span
          style="font-size:14px;font-weight:600;line-height:1.71428571"
        >
          Setting Selection
        </span>
      </legend>
      <div
        class="Box-sc-1qu1edy-0 jgHxgc sc-fzXfNe kVFKSZ"
      >
        <label
          class="ClickInputLabel-j2axnv-0 hdKIjC"
        >
          <input
            aria-invalid="true"
            aria-required="false"
            checked=""
            class="Radio__RadioInput-sc-82dpxx-1 ciJsGK sc-fzXfNe kVFKSZ"
            name="settingSelection"
            type="radio"
            value="a"
          />
          <div
            class="Radio__VisualRadio-sc-82dpxx-0 liXUJA"
          />
          <span
            class="sc-AykKF jKbmDj"
            color="currentColor"
            font-size="16px"
          >
             Option A 
          </span>
        </label>
      </div>
      <div
        class="Box-sc-1qu1edy-0 jgHxgc sc-fzXfNe kVFKSZ"
      >
        <label
          class="ClickInputLabel-j2axnv-0 hdKIjC"
        >
          <input
            aria-invalid="true"
            aria-required="false"
            class="Radio__RadioInput-sc-82dpxx-1 ciJsGK sc-fzXfNe kVFKSZ"
            name="settingSelection"
            type="radio"
            value="b"
          />
          <div
            class="Radio__VisualRadio-sc-82dpxx-0 liXUJA"
          />
          <span
            class="sc-AykKF jKbmDj"
            color="currentColor"
            font-size="16px"
          >
             Option B 
          </span>
        </label>
      </div>
      <div
        class="Box-sc-1qu1edy-0 jgHxgc sc-fzXfNe kVFKSZ"
      >
        <label
          class="ClickInputLabel-j2axnv-0 hdKIjC"
        >
          <input
            aria-invalid="true"
            aria-required="false"
            class="Radio__RadioInput-sc-82dpxx-1 ciJsGK sc-fzXfNe kVFKSZ"
            name="settingSelection"
            type="radio"
            value="c"
          />
          <div
            class="Radio__VisualRadio-sc-82dpxx-0 liXUJA"
          />
          <span
            class="sc-AykKF jKbmDj"
            color="currentColor"
            font-size="16px"
          >
             Option C 
          </span>
        </label>
      </div>
      <div
        class="Box-sc-1qu1edy-0 sc-AykKC bnFjvb"
        color="#cc1439"
      >
        <svg
          aria-hidden="true"
          class="sc-AykKD bNpWy"
          color="currentColor"
          fill="currentColor"
          focusable="false"
          height="24px"
          icon="error"
          mr="x1"
          viewBox="0 0 24 24"
          width="24px"
        >
          <path
            d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
        </svg>
        <div
          class="InlineValidation__Wrapper-sc-1jic7dw-0 iXAlLy"
        >
          <p
            class="sc-AykKF jKbmDj"
            color="currentColor"
            font-size="16px"
          >
            Please select an option
          </p>
          <ul
            class="List-sc-1cqkmnl-0 kMmxnE"
            color="currentColor"
          >
            <li
              class="ListItem-qqenhw-0 jlnRPI"
              color="currentColor"
            >
              Error message 1
            </li>
            <li
              class="ListItem-qqenhw-0 jlnRPI"
              color="currentColor"
            >
              Error message 2
            </li>
          </ul>
        </div>
      </div>
    </fieldset>
  </div>
</div>
`;

exports[`Storyshots RadioGroup with error message 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <fieldset
      class="Fieldset-sc-9aoml1-0 SrOR sc-fzXfNf cnzRUd"
    >
      <legend
        style="margin-bottom:8px"
      >
        <span
          style="font-size:14px;font-weight:600;line-height:1.71428571"
        >
          Setting Selection
        </span>
      </legend>
      <div
        class="Box-sc-1qu1edy-0 jgHxgc sc-fzXfNe kVFKSZ"
      >
        <label
          class="ClickInputLabel-j2axnv-0 hdKIjC"
        >
          <input
            aria-invalid="true"
            aria-required="false"
            checked=""
            class="Radio__RadioInput-sc-82dpxx-1 ciJsGK sc-fzXfNe kVFKSZ"
            name="settingSelection"
            type="radio"
            value="a"
          />
          <div
            class="Radio__VisualRadio-sc-82dpxx-0 liXUJA"
          />
          <span
            class="sc-AykKF jKbmDj"
            color="currentColor"
            font-size="16px"
          >
             Option A 
          </span>
        </label>
      </div>
      <div
        class="Box-sc-1qu1edy-0 jgHxgc sc-fzXfNe kVFKSZ"
      >
        <label
          class="ClickInputLabel-j2axnv-0 hdKIjC"
        >
          <input
            aria-invalid="true"
            aria-required="false"
            class="Radio__RadioInput-sc-82dpxx-1 ciJsGK sc-fzXfNe kVFKSZ"
            name="settingSelection"
            type="radio"
            value="b"
          />
          <div
            class="Radio__VisualRadio-sc-82dpxx-0 liXUJA"
          />
          <span
            class="sc-AykKF jKbmDj"
            color="currentColor"
            font-size="16px"
          >
             Option B 
          </span>
        </label>
      </div>
      <div
        class="Box-sc-1qu1edy-0 jgHxgc sc-fzXfNe kVFKSZ"
      >
        <label
          class="ClickInputLabel-j2axnv-0 hdKIjC"
        >
          <input
            aria-invalid="true"
            aria-required="false"
            class="Radio__RadioInput-sc-82dpxx-1 ciJsGK sc-fzXfNe kVFKSZ"
            name="settingSelection"
            type="radio"
            value="c"
          />
          <div
            class="Radio__VisualRadio-sc-82dpxx-0 liXUJA"
          />
          <span
            class="sc-AykKF jKbmDj"
            color="currentColor"
            font-size="16px"
          >
             Option C 
          </span>
        </label>
      </div>
      <div
        class="Box-sc-1qu1edy-0 sc-AykKC bnFjvb"
        color="#cc1439"
      >
        <svg
          aria-hidden="true"
          class="sc-AykKD bNpWy"
          color="currentColor"
          fill="currentColor"
          focusable="false"
          height="24px"
          icon="error"
          mr="x1"
          viewBox="0 0 24 24"
          width="24px"
        >
          <path
            d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
        </svg>
        <div
          class="InlineValidation__Wrapper-sc-1jic7dw-0 iXAlLy"
        >
          <p
            class="sc-AykKF jKbmDj"
            color="currentColor"
            font-size="16px"
          >
            Please select an option
          </p>
        </div>
      </div>
    </fieldset>
  </div>
</div>
`;
